// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expense with 1 expense 1`] = `
<div>
  <h3>
    You are viewing 
    1
     
    expense
    , totalling 
    $145.00
    .
  </h3>
</div>
`;

exports[`should render expenses with multiple items 1`] = `
<div>
  <h3>
    You are viewing 
    3
     
    expenses
    , totalling 
    $145,241.00
    .
  </h3>
</div>
`;
